syntax = "proto3";
package pb;

import "google/api/annotations.proto";
option go_package = "./;pb";
//import "validate/validate.proto";

//产品
service Bas{

    //产品列表
    rpc BasProductsList (BasProductsListRequest) returns (BasProductsListResponse) {
        option (google.api.http) = {
            get: "/bas/bas/products"
		};
    }

    //产品详情
    rpc BasProductsDetail (BasProductsIdRequest) returns (BasProductsDetailResponse) {
        option (google.api.http) = {
            get: "/bas/bas/products/{id}"
		};
    }

    //产品创建
    rpc BasProductsCreate(BasProductsOneRequest) returns (BasProductsResponse) {
        option (google.api.http) = {
            post: "/bas/bas/products"
            body: "*"
		};
    }

    //产品修改
    rpc BasProductsMotify(BasProductsOneRequest) returns (BasProductsResponse) {
        option (google.api.http) = {
            put: "/bas/bas/products"
            body: "*"
		};
    }

    //产品删除
    rpc BasProductsDelete(BasProductsIdRequest) returns (BasProductsResponse) {
        option (google.api.http) = {
            delete: "/bas/bas/products"
		};
    }
}

//产品通用
message BasProductsResponse{
    int32 status = 1;
    string message = 2;
       //bool data = 3;
    int32 code = 4;
    string error = 5;
    bool details = 6;
}

//产品列表
message BasProductsListRequest{
    //每页多少个
    int32 pageSize = 100;
    //页码
    int32 pageNumber = 101;
    //排序字段
    string orderKey =102;
    //排序方式
    string orderSort =103;
}

message BasProductsListResponse{
    int32 status = 1;
    string message = 2;
    //BasProductsList data = 3;
    int32 code = 4;
    string error = 5;
    BasProductsList  details = 6;
}

message BasProductsList {
    //总数
    int32 total = 1;
    //列表
    repeated BasProductsOneRequest list = 2;
}

//产品结构
message BasProductsOneRequest {
    //
    int32 id =1;
    //
    string createdAt =2;
    //
    string updatedAt =3;
    //
    string deletedAt =4;
    //
    string code =5;
    //
    int32 price =6;
    
}

//产品详情
message BasProductsIdRequest{
    int32 id =1;
}

message BasProductsDetailResponse{
    int32 status = 1;
    string message = 2;
    //BasProductsOneRequest data = 3;
    int32 code = 4;
    string error = 5;
    BasProductsOneRequest  details = 6;
}

